# cinematic-drama

./: .claudeignore  .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  START-BACKEND.ps1
cinematic-drama-app-frontend-source/: .env.example  (+11 more)
django-backend/: .env.example  .gitignore  README.md  pyproject.toml
django-backend/apps/accounts/: admin.py  models.py  services.py
django-backend/apps/accounts/migrations/: 0001_initial.py
django-backend/apps/analytics/: admin.py  models.py
django-backend/apps/catalog/: admin.py  apps.py  metadata.py  models.py  tests.py  tests_metadata.py
django-backend/apps/comments/: admin.py  apps.py  models.py
django-backend/apps/interactions/: admin.py  apps.py  models.py
django-backend/apps/media_assets/: admin.py  apps.py  models.py  test_thumbnails.py  thumbnails.py
django-backend/apps/pipeline/: admin.py  apps.py  models.py
django-backend/apps/search/: admin.py  apps.py  document_builder.py  models.py  services.py  tests.py
django-backend/config/: api.py  celery.py  settings.py  urls.py
django-backend/data/branch_narratives/: beipai-xunbao-biji.json  beiwang.json  furao-dadi.json  huangnian-xitong-mancangrou.json  jialijiawai.json  nanian-dongzhi.json  shiba-tainainai-3.json  siye.json  xingde-xiangyu-lihunshi.json  yunmiao-1-xiuxian.json
drama-understanding-agent/: .env.example  .gitignore  API.md  PLAN.md  README.md  REVIEW-branch-narrative-agent.md  REVIEW-multi-agent-and-interaction-design.md  REVIEW-v2-supplementary-fixes.md  ROOT-CAUSE-IP2-IP5.md  SPEC-interaction-component-standard.md  pyproject.toml
drama-understanding-agent/docs/: 00-architecture.md  01-memory-system.md  02-model-interface.md  03-action-plan-engine.md  04-state-patch.md  05-episode-loop.md  06-v2-iteration.md  07-alignment-audit.md  08-interaction-generator.md  09-interaction-design-agent-sdd.md  10-iteration-v2-improvements.md  11-iteration-v2-supplementary-fixes.md  12-branch-narrative-agent-sdd.md  13-component-selection-quality-fix.md  INTERACTION-DESIGN-AGENT-BRIEF.md  TEST-INSTRUCTION-fullpipeline-5eps.md  TEST-REPORT-fullpipeline-5eps-v2.md  TEST-REPORT-fullpipeline-5eps.md
drama-understanding-agent/src/branch_narrative/: __init__.py  agent.py  config.py  context_builder.py  dag_types.py  image_generator.py  output_writer.py  phase1_planning.py  phase2_narrative.py  phase3_visual.py  phase4_validation.py
drama-understanding-agent/src/drama_agent/: __init__.py  cli.py  config.py  project.py
drama-understanding-agent/src/interaction_designer/: __init__.py  agent.py  component_library.py  config.py  context_builder.py  json_utils.py  llm.py  manifest_writer.py  output_formatter.py  pass1_global.py  pass2_episode.py  safety_rules.py
drama-understanding-agent/src/interaction_generator/: __init__.py  asr_analyzer.py  config.py  event_to_highlight.py  highlight_to_ip.py  manifest_writer.py  pipeline.py
drama-understanding-agent/tests/: test_action_handlers.py  test_action_plan_parse.py  test_asr_client.py  test_branch_narrative_agent.py  test_doubao_client.py  test_episode_loop.py  test_exclusion_rules.py  test_interaction_designer_agent.py  test_memory_store.py  test_project.py  test_relationship_dedup.py  test_report_markdown.py  test_state_patch.py  test_table_validation.py  test_thread_dedup.py  test_vectors.py
(+125 files in other folders)
