[project]
name = "cinematic-drama-django-backend"
version = "0.1.0"
description = "Django REST API for the Cinematic Drama Interactive System."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ClipHound" }]
keywords = ["django", "short-drama", "interactive-video", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Django :: 5.1",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "Django>=5.1,<6",
  "djangorestframework>=3.15",
  "celery>=5.4",
  "redis>=5",
  "psycopg[binary]>=3.2",
  "Pillow>=10",
]

[project.urls]
Homepage = "https://github.com/ClipHound/cinematic-drama"
Repository = "https://github.com/ClipHound/cinematic-drama"
Issues = "https://github.com/ClipHound/cinematic-drama/issues"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
