[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "cinematic-drama-django-backend"
version = "0.1.0"
description = "Django REST API and RAG services for the Cinematic Drama Interactive System."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ClipHound" }]
keywords = ["django", "rag", "short-drama", "interactive-video", "ai"]
dependencies = [
  "Django>=5.1,<6",
  "djangorestframework>=3.15",
  "django-cors-headers>=4.7",
  "celery>=5.4",
  "redis>=5",
  "psycopg[binary]>=3.2",
  "Pillow>=10",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/ClipHound/cinematic-drama"
Repository = "https://github.com/ClipHound/cinematic-drama"
Issues = "https://github.com/ClipHound/cinematic-drama/issues"

[tool.setuptools.packages.find]
include = ["apps*", "config*"]
exclude = ["data*", "media*", "static*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py"]
